# cs-datstruct-algos

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  flake.nix
.agents/references/: api-consistency-checklist.md
.agents/skills/api-consistency/: SKILL.md
.agents/skills/using-agent-skills/: SKILL.md
.github/scripts/: validate-commits.sh  validate-naming.sh
.github/workflows/: docs.yml  pre-merge.yml
agents/: code-reviewer.md  docs-benchmark-sync.md
benchmarks/: linked_list_bench.c  queue_push_pop_bench.c  vector_push_pop_bench.c
benchmarks/common/: bench_payload.h  bench_report.h
cmake/: benchmarks.cmake
docs/: .gitignore  mkdocs.yml
docs/docs/: index.md
docs/docs/data-structures/: binary-heap.md  deque.md  hashmap.md  linked-list.md
docs/docs/reference/: ckit-compare.md  ckit-mem-allocators.md  ckit-mem-bytes.md  ckit-mem-general-heap.md  ckit-status.md  cstd-status.md
include/ckit/: compare.h  status.h
include/ckit/datastruct/: binary_heap.h  deque.h  hashmap.h  linked_list.h
include/ckit/mem/: align.h  bytes.h
include/cstd/: status.h
include/cstd/datastruct/: hashmap.h  linked_list.h  queue.h  vector.h
include/datastruct/: queue.h  vector.h
nix/: shell.nix
nix/checks/: build.nix  default.nix  format.nix  tests.nix
skills/: README.md
skills/using-agent-skills/: SKILL.md
src/: vector.c  vector.h
src/common/: compare.c
src/crypto/: fnv1a.h
src/datastruct/: binary_heap.c  deque.c  hashmap.c  linked_list.c  queue.c  vector.c
src/mem/: bytes.c
src/mem/allocators/: allocator.c  general_heap.c
tests/common/compare/: cmp_test.c  eq_test.c
tests/datastruct/: vector_test.c
tests/datastruct/binary_heap/: free_test.c  init_test.c  peek_test.c  pop_test.c  push_test.c
tests/datastruct/deque/: free_test.c  init_test.c  peekback_test.c  peekleft_test.c  popback_test.c  popleft_test.c  push_test.c  pushfront_test.c
tests/datastruct/hashmap/: init_test.c  put_get_test.c  remove_growth_test.c
tests/datastruct/linked_list/: free_test.c  init_test.c  (+3 more)
tooling/cmake/: benchmarks.cmake
(+18 files in other folders)
